# goit-pythonweb-hw-08

./: .env.example  README.md  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 0db134e4a4e4_add_user.py  1cb9a5ff65c5_init.py  87bdd628e77e_add_to_model_user_filed_confirmed.py  b786f0665dc2_update_contacts_made_first_name_not_.py  cbbcd881e672_edit_uniqie_fileds.py
src/auth/: controller.py  service.py
src/contacts/: controller.py  repository.py  service.py
src/database/: config.py
src/database/contacts/: model.py  schemas.py
src/database/users/: model.py  schemas.py
src/services/email/: service.py
src/services/file/: service.py
src/users/: controller.py  repository.py  service.py
src/utils/: env_variables.py  error_handlers.py  healthchecker.py  next_birthday.py
